Update on EPMC TM dataset
Implementation of iteration 3 of the text-mining pipeline.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /Users/ppm/Documents/Projects/darkspaceproject/reactome_interactions/.Rproj.user
 /Users/ppm/Documents/Projects/darkspaceproject/reactome_interactions/.Rhistory
 /Users/ppm/Documents/Projects/darkspaceproject/reactome_interactions/.RData
+/Users/ppm/Documents/Projects/darkspaceproject/epmc_text_mining/source_files/PPI_Iter3.txt
