--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@
 /Users/ppm/Documents/Projects/darkspaceproject/reactome_interactions/.Rhistory
 /Users/ppm/Documents/Projects/darkspaceproject/reactome_interactions/.RData
 /Users/ppm/Documents/Projects/darkspaceproject/epmc_text_mining/source_files/PPI_Iter3.txt
+/dsp_comparison/geneID2pubmed_release_04-2017
+/dsp_comparison/geneID2pubmed_release_04-2017
+
